Initial pass of update to JDK 19