@@ -49,11 +49,11 @@
   "Compiles java classes required for interop."
   [opts]
   (.mkdirs (io/file class-dir))
-  (b/process {:command-args ["javac" "--add-modules=jdk.incubator.foreign"
+  (b/process {:command-args ["javac" "--enable-preview"
                              "src/java/coffi/ffi/Loader.java"
                              "-d" class-dir
-                             "-target" "18"
-                             "-source" "18"]})
+                             "-target" "19"
+                             "-source" "19"]})
   opts)
 
 (defn- write-pom
